<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <Button
        android:id="@+id/btnCreateNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/btnCreateNew" />

    <Button
        android:id="@+id/btnEditContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEditContact"
        android:layout_below="@+id/btnCreateNew"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <Button
        android:id="@+id/btnDeleteContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDeleteContact"
        android:layout_below="@+id/btnEditContact"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <Button
        android:id="@+id/btnDisplayContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnDeleteContact"
        android:layout_marginTop="37dp"
        android:text="@string/btnDisplayContact" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnDisplayContact"
        android:layout_marginTop="37dp"
        android:text="@string/btnFinish" />
</RelativeLayout>