<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageBtnContact"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/add_photo" />

        <EditText
            android:id="@+id/editFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageBtnContact"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="First"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editFirst"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editLast" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editLast"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editCompany" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editCompany"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editPhone" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPhone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editEmail" />

        <EditText
            android:id="@+id/editURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editEmail"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editURL" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editURL"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editAddress" />

        <EditText
            android:id="@+id/editBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editAddress"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editBirthday" />

        <EditText
            android:id="@+id/editNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editBirthday"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editNickName" />

        <EditText
            android:id="@+id/editfbUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editNickName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/editfbUrl"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTwitterUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editfbUrl"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/editTwitterUrl"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editSkype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTwitterUrl"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/editSkype"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edityoutubeChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editSkype"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="YouTube Channel"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edityoutubeChannel"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/btnSave" />

    </RelativeLayout>
</ScrollView>